fix align items

--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@
     display: flex;
     max-width: 100%;
     gap: 50px; 
-    align-items: center;
-
 }
+
+
 
 .btnu{
     padding: 3px 5px;
